Ajustes e implementações de novas funcionalidades